--- a/src/app/shared/components/crud-template/crud-template.component.scss
+++ b/src/app/shared/components/crud-template/crud-template.component.scss
@@ -1,22 +1,23 @@
-.container {
-  width: 100%;
-  // max-width: 1200px;
-  // margin: 10px auto;
-  // padding: 10px;
-  // box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
+// .container {
+//   width: 100%;
+//   // max-width: 1200px;
+//   // margin: 10px auto;
+//   // padding: 10px;
+//   // box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+// }
 
-.toolbar {
-  display: flex;
-  align-items: center;
-  // margin-bottom: 20px;
-  // gap: 16px;
-}
+// .toolbar {
+//   display: flex;
+//   align-items: center;
+//   // margin-bottom: 20px;
+//   // gap: 16px;
+// }
 
-.search-field {
-  width: 400px;
-}
+// .search-field {
+//   width: 400px;
+// }
 
-.spacer {
-  flex: 1;
-}
+// .spacer {
+//   flex: 1;
+// }
+
